--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,4 +5,13 @@
 {% endblock %}
 
 {% block content %}
+<ul>
+    {% for group in groups %}
+    <li>
+        <a href="{{ url_for('groups.group', group_id=group.id) }}">{{ group.name }}</a>
+    
+    </li>
+    {% endfor %}
+    <li><a href="{{ url_for('groups.create') }}">Create Group</a></li>
+</ul>
 {% endblock %}
