--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,7 @@
       <li><a href="{{ url_for('auth.login') }}">Log In</a>
     {% endif %}
   </ul>
+  <a href="{{ url_for('root.index') }}">Home</a>
 </nav>
 <section class="content">
   <header>
