--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,11 +5,23 @@
 {% endblock %}
 
 {% block content %}
+<h2>Invites</h2>
+<ul>
+    {% for invite in invites %}
+    <li>
+        {{ invite.name }}
+        <form action="{{ url_for('groups.accept_invite', invite_id=invite.id) }}" method="post">
+            <input type="submit" value="Accept">
+            
+        </form>
+    </li>
+    {% endfor %}
+</ul>
+<h2>Groups</h2>
 <ul>
     {% for group in groups %}
     <li>
         <a href="{{ url_for('groups.group', group_id=group.id) }}">{{ group.name }}</a>
-    
     </li>
     {% endfor %}
     <li><a href="{{ url_for('groups.create') }}">Create Group</a></li>
