--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,10 @@
 <!doctype html>
-<title>{% block title %}{% endblock %} - Chat</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<head>
+  <meta charset="utf-8">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" crossorigin="anonymous"></script>
+  <title>{% block title %}{% endblock %}</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+</head>
 <nav>
   <h1>Chat</h1>
   <ul>
