--- a/app/templates/errors/error.html
+++ b/app/templates/errors/error.html
@@ -2,4 +2,5 @@
 
 {% block content %}
     <h1>{{ error_message }}</h1>
+    <a href="{{ url_for('root.index') }}">Back to safety</a>
 {% endblock %}
