--- a/app/templates/groups/group.html
+++ b/app/templates/groups/group.html
@@ -1,25 +1,94 @@
 {% extends "base.html" %}
 
 {% block header %}
-<h1>{{ group.name }}</h1>
+<div>
+
+    <h1>{{ group.name }}</h1>
+    <div>
+        {% for member in members %}
+        <span>{{ member.username }},</span>
+        {% endfor %}
+    </div>
+</div>
 {% if is_user_group_creator %}
 <a href="{{ url_for('groups.edit', group_id=group.id) }}">Edit</a>
 {% endif %}
 {% endblock %}
 
 {% block content %}
-{% for message in messages %}
-<p>{{ message.content }}</p>
-{{ message.user_id }}
-{% endfor %}
-<form action="{{ url_for('groups.group', group_id=group.id) }}" method="post">
-    <input type="hidden" name="group_id" value="{{ group.id }}">
-    <input autofocus type="text" name="content" placeholder="Message">
-    <input type="submit" value="Send">
-</form>
-<script>
-    console.log({{messages|tojson}});
+{% if has_more_messages %}
+<a href="{{ url_for('groups.group', group_id=group.id, pages=pages + 1) }}">Get more messages</a>
+{% endif %}
+<div id="chat-messages" style="display: flex; max-height: 62vh; overflow-y: auto; flex-direction: column-reverse; gap: 10px;">
+</div>
+<input autofocus type="text" name="content" placeholder="Message" onkeydown="handleKeyDown(event)">
+<button onclick="handleSendMessage(event)">Send</button>
+<script type="text/javascript">
     const chat_messages = {{messages|tojson}};
-    console.log(chat_messages);
+    const chat_message_feed = document.getElementById('chat-messages');
+    
+    const renderChatMessages = function() {
+        chat_message_feed.innerHTML = '';
+        chat_messages.forEach(message => {
+            const message_element = document.createElement('div');
+            message_element.style.border = '1px solid black';
+            message_element.innerHTML = `
+            <p>${message.content}</p>
+            <span>${message.created_at}</span>
+            <span>${message.username}</span>`;
+            chat_message_feed.appendChild(message_element);
+        });
+    }
+    renderChatMessages();
+    var socket = io();
+
+    function connectWithRetries(retry = 0) {
+        if (retry > 5) {
+            return;
+        }
+        try {
+            setTimeout(function() {
+                console.debug("Connecting to socket, attempt", retry);
+                socket.connect();
+            }, 1000 * (retry ** 2));
+        } catch (error) {
+            console.debug("Failed to connect to socket, retrying...", error);
+            connectWithRetries(retry + 1);
+        }
+    }
+    socket.emit('join_group', {group_id: '{{group.id}}'});
+    socket.on('connect', function() {
+        socket.emit('connected', {data: '{{session.user_id}}'});
+    });
+    socket.on('message', function(data) {
+        console.log('received message', data);
+        chat_messages.unshift(data);
+        renderChatMessages();
+    });
+
+    socket.on('disconnect', function() {
+        console.log('disconnected');
+        connectWithRetries();
+    });
+
+    socket.on('connect', function() {
+        console.log('connected');
+    });
+
+    const handleKeyDown = function(event) {
+        if (event.key === 'Enter') {
+            handleSendMessage(event);
+        }
+    }
+    const handleSendMessage = function(event) {
+        event.preventDefault();
+        const message = {
+            content: document.querySelector('input[name="content"]').value,
+            group_id: '{{group.id}}'
+        };
+        document.querySelector('input[name="content"]').value = '';
+        console.log(message);
+        socket.send(message);
+    };
 </script>
 {% endblock %}
