--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
         {{ invite.name }}
         <form action="{{ url_for('groups.accept_invite', invite_id=invite.id) }}" method="post">
             <input type="submit" value="Accept">
-            
+            <input type="hidden" name="csrf_token" value="{{ session['csrf_token'] }}">
         </form>
     </li>
     {% endfor %}
