--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -5,6 +5,9 @@
 {% endblock %}
 {% block content %}
 <div>
+    {% if error %}
+        <p>{{ error }}</p>
+    {% endif %}
     <form method="post">
         <label for="username">Username</label>
         <input name="username" id="username" required>
