--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,10 +1,13 @@
 <!doctype html>
-<head>
+<head class="{{session.theme}}">
   <meta charset="utf-8">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" crossorigin="anonymous"></script>
   <title>{% block title %}{% endblock %}</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/input.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
+<body class="bg-bg9">
 <nav>
   <h1>Chat</h1>
   <ul>
@@ -27,3 +30,4 @@
   {% endfor %}
   {% block content %}{% endblock %}
 </section>
+</body>
