--- a/app/static/css/output.css
+++ b/app/static/css/output.css
@@ -556,6 +556,29 @@ video {
   display: none;
 }
 
+.text-head-1{
+  font-weight: 600;
+  font-size: 1.25rem;
+  line-height: 1.5rem;
+  color: var(--fg1);
+  letter-spacing: -0.0125rem;
+}
+
+.text-head-2{
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 1.25rem;
+  color: var(--fg2);
+  letter-spacing: -0.0125rem;
+}
+
+.text-elem-3{
+  font-weight: 400;
+  font-size: 0.875rem;
+  color: var(--fg1);
+  line-height: 1rem;
+}
+
 h1{
   font-weight: 600;
   font-size: 1.25rem;
@@ -594,6 +617,39 @@ a{
   line-height: 1rem;
 }
 
+button{
+  font-weight: 400;
+  font-size: 0.875rem;
+  color: var(--fg1);
+  line-height: 1rem;
+  border-radius: 0.375rem;
+  border-width: 1px;
+  border-color: var(--bg9);
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+input{
+  border-radius: 0.375rem;
+  border-width: 1px;
+  border-color: var(--bg9);
+  background-color: transparent;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+label{
+  font-weight: 400;
+  font-size: 0.875rem;
+  color: var(--fg1);
+  line-height: 1rem;
+  color: var(--fg3);
+}
+
 .visible{
   visibility: visible;
 }
@@ -606,8 +662,28 @@ a{
   position: static;
 }
 
+.absolute{
+  position: absolute;
+}
+
 .relative{
   position: relative;
+}
+
+.right-1{
+  right: 0.25rem;
+}
+
+.top-14{
+  top: 3.5rem;
+}
+
+.m-auto{
+  margin: auto;
+}
+
+.ml-auto{
+  margin-left: auto;
 }
 
 .block{
@@ -630,6 +706,18 @@ a{
   display: none;
 }
 
+.h-12{
+  height: 3rem;
+}
+
+.h-full{
+  height: 100%;
+}
+
+.w-full{
+  width: 100%;
+}
+
 .border-collapse{
   border-collapse: collapse;
 }
@@ -642,16 +730,113 @@ a{
   resize: both;
 }
 
+.flex-col{
+  flex-direction: column;
+}
+
+.items-center{
+  align-items: center;
+}
+
+.justify-between{
+  justify-content: space-between;
+}
+
+.gap-2{
+  gap: 0.5rem;
+}
+
+.gap-4{
+  gap: 1rem;
+}
+
+.gap-8{
+  gap: 2rem;
+}
+
+.rounded-lg{
+  border-radius: 0.5rem;
+}
+
+.rounded-md{
+  border-radius: 0.375rem;
+}
+
 .border{
   border-width: 1px;
+}
+
+.border-bg3{
+  border-color: var(--bg3);
+}
+
+.border-bg6{
+  border-color: var(--bg6);
+}
+
+.border-bg9{
+  border-color: var(--bg9);
+}
+
+.border-fg3{
+  border-color: var(--fg3);
+}
+
+.border-fg4{
+  border-color: var(--fg4);
+}
+
+.border-fg6{
+  border-color: var(--fg6);
 }
 
 .bg-bg1{
   background-color: var(--bg1);
 }
 
+.bg-bg3{
+  background-color: var(--bg3);
+}
+
 .bg-bg9{
   background-color: var(--bg9);
+}
+
+.p-4{
+  padding: 1rem;
+}
+
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.text-bg9{
+  color: var(--bg9);
+}
+
+.text-fg9{
+  color: var(--fg9);
 }
 
 .underline{
@@ -678,13 +863,13 @@ a{
   --fg9: hsl(110, 71%, 18%);
   --bg1: hsl(192, 100%, 98%);
   --bg2: hsl(192, 100%, 94%);
-  --bg3: hsl(192, 100%, 92%);
-  --bg4: hsl(192, 100%, 90%);
-  --bg5: hsl(192, 100%, 88%);
-  --bg6: hsl(192, 100%, 86%);
-  --bg7: hsl(192, 100%, 84%);
-  --bg8: hsl(192, 100%, 82%);
-  --bg9: hsl(192, 100%, 80%);
+  --bg3: hsl(192, 95%, 92%);
+  --bg4: hsl(192, 95%, 90%);
+  --bg5: hsl(192, 90%, 88%);
+  --bg6: hsl(192, 90%, 86%);
+  --bg7: hsl(192, 90%, 84%);
+  --bg8: hsl(192, 90%, 82%);
+  --bg9: hsl(192, 90%, 80%);
   --primary1: hsl(342, 96%, 96%);
   --primary2: hsl(342, 96%, 84%);
   --primary3: hsl(342, 96%, 72%);
