--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -5,14 +5,18 @@
 {% endblock %}
 
 {% block content %}
+<div class="flex flex-col gap-4 m-auto border border-fg3 rounded-lg p-4">
+
     {% if error %}
     <p>{{ error }}</p>
     {% endif %}
-    <form method="post">
+    <form method="post" class="flex flex-col gap-2">
         <label for="username">Username</label>
         <input name="username" id="username" required>
         <label for="password">Password</label>
         <input type="password" name="password" id="password" required>
-        <input type="submit" value="Log In">
+        <button type="submit">Log In</button>
+        <a class="text-xs text-bg9" href="{{ url_for('auth.signup') }}">Don't have an account? Sign Up</a>
     </form>
+</div>
 {% endblock %}
