--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,22 +1,11 @@
-{% extends 'base.html' %}
-
-{% block header %}
-    <h1>{% block title %}Log In{% endblock %}</h1>
-{% endblock %}
-
-{% block content %}
-<div class="flex flex-col gap-4 m-auto border border-fg3 rounded-lg p-4">
-
-    {% if error %}
-    <p>{{ error }}</p>
-    {% endif %}
-    <form method="post" class="flex flex-col gap-2">
-        <label for="username">Username</label>
-        <input name="username" id="username" required>
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" required>
-        <button type="submit">Log In</button>
-        <a class="text-xs text-bg9" href="{{ url_for('auth.signup') }}">Don't have an account? Sign Up</a>
-    </form>
-</div>
-{% endblock %}
+{% extends 'auth/auth-base.html' %} {% block title %}Log In{% endblock %} {% block form_content %}
+<label for="username">Username
+    <input name="username" id="username" required>
+</label>
+<label for="password">Password
+    <input type="password" name="password" id="password" required>
+</label> {% if error %}
+<p class="text-tertiary6">{{ error }}</p>
+{% endif %}
+<button type="submit" class="w-full mt-4 bg-primary3">Log In</button>
+<a class="text-xs text-fg9" href="{{ url_for('auth.signup') }}">Don't have an account? Sign Up</a> {% endblock %}
