--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,38 +2,54 @@
 <html lang="en" class="{{session.theme}}">
 
 <head>
-  <meta charset="utf-8">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" crossorigin="anonymous"></script>
-  <title>{% block title %}{% endblock %}</title>
- 
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/input.css') }}">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <meta charset="utf-8">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" crossorigin="anonymous"></script>
+    <title>{% block title %}{% endblock %}</title>
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/input.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
 </head>
+
 <body class="bg-bg1">
-<nav class="flex gap-8 px-3 items-center w-full h-12 bg-bg3">
-  <h1>Chat</h1>
-  <a href="{{ url_for('root.index') }}">Home</a>
-  <ul class="flex gap-4 ml-auto">
-    <form action="{{ url_for('root.toggle_theme') }}" method="post">
-      <button id="theme-toggle">Toggle Theme</button>
-    </form>
-    {% if session.username %}
-    <p>You are logged in as {{ session.username }}</p>
-      <a href="{{ url_for('auth.logout') }}">Log Out</a>
-    {% else %}
-      <li><a href="{{ url_for('auth.signup') }}">Sign Up</a>
-      <li><a href="{{ url_for('auth.login') }}">Log In</a>
-    {% endif %}
-  </ul>
-</nav>
-<section class="w-full h-full flex">
-  <div class="flash absolute top-14 right-1">
-  {% for message in get_flashed_messages() %}
-    <div class="bg-bg3 border border-fg3 rounded-md px-2 py-1">{{ message }}</div>
-  {% endfor %}
-</div>
-  {% block content %}{% endblock %}
-</section>
+
+    <div class="flex flex-col h-full w-full overflow-hidden">
+        <nav class="flex gap-8 px-3 items-center w-full h-12 bg-primary2">
+            <h1>Chat</h1>
+            <a href="{{ url_for('root.index') }}">Home</a>
+            <ul class="flex gap-4 ml-auto items-center">
+                <button id="theme-toggle">Toggle Theme</button> {% if session.username %}
+                <p>You are logged in as {{ session.username }}</p>
+                <a href="{{ url_for('auth.logout') }}">Log Out</a> {% else %}
+                <li><a href="{{ url_for('auth.signup') }}">Sign Up</a>
+                    <li><a href="{{ url_for('auth.login') }}">Log In</a> {% endif %}
+            </ul>
+        </nav>
+        <section class="w-full flex-grow flex">
+            <div class="flash absolute top-14 right-1">
+                {% for message in get_flashed_messages() %}
+                <div class="bg-bg3 border border-fg3 rounded-md px-2 py-1">{{ message }}</div>
+                {% endfor %}
+            </div>
+            {% block content %}{% endblock %}
+        </section>
+    </div>
+    <script>
+        const themeToggle = document.getElementById('theme-toggle');
+        const getCurrentTheme = () => window.localStorage.getItem('theme');
+        const currentTheme = getCurrentTheme();
+
+        if (currentTheme) {
+            document.documentElement.classList = currentTheme === 'dark' ? ['dark'] : ['light'];
+        }
+
+        themeToggle.addEventListener('click', () => {
+            const currentTheme = getCurrentTheme();
+            window.localStorage.setItem('theme', currentTheme === 'dark' ? 'light' : 'dark');
+            document.documentElement.classList = currentTheme === 'dark' ? ['light'] : ['dark'];
+        });
+    </script>
 </body>
+
 </html>
