--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
 <body class="bg-bg1">
 
     <div class="flex flex-col h-full w-full overflow-hidden">
-        <nav class="flex gap-8 px-3 items-center w-full h-12 bg-primary2">
+        <nav class="flex gap-8 px-4 border-b border-primary4 items-center w-full h-12 bg-primary2">
             <h1>Chat</h1>
             <a href="{{ url_for('root.index') }}">Home</a>
             <ul class="flex gap-4 ml-auto items-center">
