--- a/app/static/css/input.css
+++ b/app/static/css/input.css
@@ -32,6 +32,13 @@
   label {
     @apply text-elem-3 text-fg3 flex flex-col gap-1;
   }
+
+  .group-card {
+    @apply border border-primary4 rounded-md px-4 py-2;
+  }
+  #view-container {
+    @apply flex flex-col h-full grow overflow-y-auto m-4;
+  }
 }
 
 :root {
