--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -1,4 +1,4 @@
-{% extends 'auth/auth-base.html' %} {% block title %}Sign Up{% endblock %} {% block form_content %}
+{% extends 'auth/auth-base.html' %} {% block auth_title %}Sign Up{% endblock %} {% block form_content %}
 <label for="username">Username
     <input name="username" id="username" required>
 </label>
