--- a/app/templates/groups/create.html
+++ b/app/templates/groups/create.html
@@ -1,14 +1,16 @@
-{% extends "base.html" %}
-
-{% block header %}
+{% extends "groups/group-base.html" %}
+{% block view_header %}
 <h1>Create Group</h1>
 {% endblock %}
+{% block group_content %}
+<div id="view-container">
+    <form method="post" class="max-w-[400px] flex flex-col gap-4">
+        <label for="name">Name
 
-{% block content %}
-<form method="post">
-    <label for="name">Name</label>
-    <input name="name" id="name" required>
-    <input type="hidden" name="csrf_token" value="{{ session['csrf_token'] }}">
-    <input type="submit" value="Save">
-</form>
+            <input name="name" id="name" required>
+        </label>
+        <input type="hidden" name="csrf_token" value="{{ session['csrf_token'] }}">
+        <input type="submit" value="Save">
+    </form>
+</div>
 {% endblock %}
