--- a/app/templates/groups/group.html
+++ b/app/templates/groups/group.html
@@ -1,28 +1,32 @@
 {% extends "groups/group-base.html" %}
-{% block view_header %}
-    <h1>{{ group.name }}</h1>
-    <div>
-        {% for member in members %}
-        <span>{{ member.username }},</span>
-        {% endfor %}
-    </div>
-    {% if is_user_group_creator %}
-<a class="ml-auto" href="{{ url_for('groups.edit', group_id=group.id) }}">Edit</a>
-{% endif %}
-{% endblock %}
+
 {% block group_content %}
 <div id="view-container">
+    <div class="flex justify-between items-center">
 
+        <h1>{{ group.name }}</h1>
+        <div>
+            {% for member in members %}
+            <span>{{ member.username }},</span>
+            {% endfor %}
+        </div>
+        {% if is_user_group_creator %}
+        <a class="ml-auto" href="{{ url_for('groups.edit', group_id=group.id) }}">Edit</a>
+        {% endif %}
+    </div>
 
-{% if has_more_messages %}
+<div id="chat-container" class="flex flex-col  grow overflow-y-auto">
+    {% if has_more_messages %}
 <a href="{{ url_for('groups.group', group_id=group.id, pages=pages + 1) }}">Get more messages</a>
 {% endif %}
-<div id="chat-messages" style="display: flex; max-height: 62vh; overflow-y: auto; flex-direction: column-reverse; gap: 10px;">
+<div id="chat-messages" class="flex flex-col-reverse gap-2 justify-end">
 </div>
-<input autofocus type="text" name="content" placeholder="Message" onkeydown="handleKeyDown(event)">
-<button id="send-message-button" onclick="handleSendMessage(event)">Send</button>
+</div>  
+<div class="flex max-w-sm h-12 rounded-md overflow-hidden border border-primary4">
+    <input class="h-full grow border-none rounded-none outline-none" autofocus type="text" name="content" placeholder="Message" onkeydown="handleKeyDown(event)">
+    <button class="border-r-0 h-full border-y-0 border-l border-l-primary3 rounded-none" id="send-message-button" onclick="handleSendMessage(event)">Send</button>
 </div>
-
+</div>
 <script type="text/javascript">
     const chatMessages = {{messages|tojson}};
     const chatMessageFeed = document.getElementById('chat-messages');
@@ -43,13 +47,13 @@
     var socket = io();
 
     function markAsDisconnected() {
-        const sendButton = document.querySelector('#');
+        const sendButton = document.querySelector('#send-message-button');
         sendButton.innerHTML = 'Reconnecting...';
         sendButton.disabled = true;
     }
 
     function markAsConnected() {
-        const sendButton = document.querySelector('button');
+        const sendButton = document.querySelector('#send-message-button');
         sendButton.innerHTML = 'Send';
         sendButton.disabled = false;
     }
@@ -98,8 +102,12 @@
 
     const handleSendMessage = function(event) {
         event.preventDefault();
+        const content = document.querySelector('input[name="content"]').value;
+        if (content.length === 0) {
+            return;
+        }
         const message = {
-            content: document.querySelector('input[name="content"]').value,
+            content,
             group_id: '{{group.id}}'
         };
         document.querySelector('input[name="content"]').value = '';
