--- a/app/static/css/input.css
+++ b/app/static/css/input.css
@@ -26,7 +26,7 @@
   }
 
   input {
-    @apply border border-fg8 h-8 rounded-md px-2 py-1 bg-transparent;
+    @apply border border-fg8 h-8 rounded-md px-2 py-1 bg-transparent text-fg3;
   }
 
   label {
